--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,6 @@ install:
   - pip install pylint circuitpython-build-tools
 
 script:
-  - pylint --version
-  - pylint adafruit_onewire/bus.py
-  - pylint adafruit_onewire/device.py
+  - pylint adafruit_onewire/*.py
   - ([[ ! -d "examples" ]] || pylint --disable=missing-docstring,invalid-name examples/*.py)
   - circuitpython-build-bundles --filename_prefix adafruit-circuitpython-onewire --library_location .
